# phoxi_camera_ros2

./: README.md
phoxi_camera/: CMakeLists.txt  package.xml
phoxi_camera/cfg/: phoxi_camera.cfg
phoxi_camera/config/: defaultparams.yaml
phoxi_camera/include/phoxi_camera/: PhoXiConversions.h  PhoXiDeviceInformation.h  PhoXiException.h  PhoXiInterface.h  RosConversions.h  Types.h  ros_Interface.hpp
phoxi_camera/launch/: phoxi_camera_launch.py
phoxi_camera/src/: PhoXiInterface.cpp  RosInterface.cpp  phoxi_camera_node.cpp
phoxi_msgs/: CMakeLists.txt  package.xml
phoxi_msgs/msg/: DeviceConnectionStatus.msg  DeviceInformation.msg  DeviceType.msg
phoxi_msgs/srv/: ConnectCamera.srv  GetDeviceList.srv  GetFrame.srv  GetString.srv  SaveFrame.srv  SaveLastFrame.srv  SetCoordinatesSpace.srv  TriggerImage.srv
