<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phoxi_camera</name>
  <version>0.0.0</version>
  <description>Photoneo Phoxi 3D scanner ROS2 driver</description>
  <maintainer email="yadan001@e.ntu.edu.sg">zyadan</maintainer>
  <license>Nanyang Technological University</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>OpenCV</depend>
  <depend>std_srvs</depend>
  <depend>PhoXi</depend>
  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>
  <depend>phoxi_msgs</depend>
  <depend>libeigen3-dev</depend>
  <depend>libpcl-dev</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>generate_parameter_library</depend>
  <depend>diagnostic_updater</depend>
  
 

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
